# SimpleNES-py

./: .gitignore  BUILDING.md  PROJECT_SUMMARY.md  README.md  build.py  build.sh  build_executable.py  config.json  hook-pygame.py  main.py  pyproject.toml  requirements.txt  run.sh  test_basic_cpu.py  test_opcode_fixes.py
simple_nes/: __init__.py
simple_nes/apu/: apu.py
simple_nes/bus/: __init__.py  mainbus.py
simple_nes/cartridge/: cartridge.py  mapper.py
simple_nes/controller/: __init__.py  controller.py
simple_nes/cpu/: cpu.py
simple_nes/emulator/: __init__.py  emulator.py
simple_nes/ppu/: __init__.py  ppu.py  renderer.py
simple_nes/util/: __init__.py  config.py  logging.py
src/: __init__.py
src/cartridge/: mapper.py
src/controller/: controller.py
src/emulator/: apu.py  emulator.py
src/ppu/: ppu.py  renderer.py
src/simple_nes/: __init__.py
src/simple_nes/bus/: mainbus.py
src/simple_nes/cartridge/: __init__.py
src/simple_nes/cpu/: __init__.py  cpu.py
src/simple_nes/emulator/: emulator.py
src/simple_nes/ppu/: renderer.py
tests/: __init__.py  test_apu_channels.py  test_basic_cpu.py  test_cpp_compatibility.py  test_fixes.py  test_mmc3_mapper.py  test_opcode_fixes.py
tests/unit/: __init__.py  test_basic_imports.py  test_basic_imports_mocked.py  test_components.py  test_integration.py  test_module_functionality.py  test_ppu.py
