[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-nes"
version = "0.1.0"
description = "A Python implementation of an NES emulator"
readme = "README.md"
authors = [{name = "SimpleNES-py Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygame>=2.0.0",
    "numpy>=1.21.0",
    "Pillow>=8.0.0",
]

[project.scripts]
simple-nes = "simple_nes.emulator.emulator:main"
simple-nes-build = "build_executable:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]
build = [
    "pyinstaller>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/insomniacdoll/SimpleNES-py"
Repository = "https://github.com/insomniacdoll/SimpleNES-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_nes*"]